--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,4 +1,8 @@
 
 dependencies {
+    compile group: 'com.google.guava', name: 'guava', version: '23.6-jre'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.0.2'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
+
 }
