--- a/plugins/build.gradle
+++ b/plugins/build.gradle
@@ -1,5 +1,3 @@
-version 'unspecified'
-
 apply plugin: 'java'
 
 sourceCompatibility = 1.8
@@ -7,6 +5,20 @@ sourceCompatibility = 1.8
 repositories {
     mavenCentral()
 }
+
+project("common") {
+    dependencies {
+        compile project(":plugins")
+    }
+}
+
+project("olx") {
+    dependencies {
+        compile project(":plugins:common")
+    }
+}
+
+
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
